--- a/driver/driverLogin/style.css
+++ b/driver/driverLogin/style.css
@@ -1,3 +1,11 @@
+body
+{
+    display: flex;
+    flex-direction: column;
+
+}
+
+
 .header
 {
     display: flex;
@@ -51,3 +59,49 @@ img
     border-left: 5px solid black;
     text-align: center;
 }
+
+/*SignUp form*/
+.signUpformContainer
+{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    position: sticky;
+    left: 25%;
+    border: 2px solid black;
+    width: 50%;
+}
+
+.signUpFormHeading
+{
+    color: tomato;
+    text-align: center;
+}
+
+.signUpForm
+{
+    position: sticky;
+    display: flex;
+    justify-content: space-around;
+}
+
+input[type=text], input[type=password], input[type=email] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+
+input[type=text]:focus, input[type=password], input[type=email]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+
+footer
+{
+    background-color: beige;
+    color: white;
+}
+
