--- a/NTSF Fine Check/style.css
+++ b/NTSF Fine Check/style.css
@@ -1,6 +1,7 @@
 body 
 {
-    background-position: center;
+    background-position: absolute;
+    align-items: center;
     background-image:url("Background.jpeg");
 }
 
