--- a/NTSF Homepage/style.css
+++ b/NTSF Homepage/style.css
@@ -1,5 +1,7 @@
 body 
-{
+{   
+    background-position: absolute;
+    align-items: center;
     background-image: url("Background.jpeg");
 }
 
@@ -78,12 +80,11 @@ body
     align-items:center;
     display: flex;
     justify-content: space-between;
-    width: 15vw;
-    height:40%;
+    width: 70%;
+    height:30%;
     font-style: bold;
     font-size: 20px;
-    padding-left: 25%;
-    padding-right: 20%;
+    padding-left: 20%;
     margin: 8vh;
     font-family: sans-serif;
 } 
@@ -96,12 +97,11 @@ body
     align-items:center;
     display: flex;
     justify-content: space-between;
-    width: 15vw;
-    height:40%;
+    width: 70%;
+    height:30%;
+    padding-left: 17%;
     font-style: bold;
     font-size: 20px;
-    padding-left: 25%;
-    padding-right: 20%;
     margin: 8vh;
     font-family: sans-serif;
 } 
@@ -114,12 +114,11 @@ body
     align-items:center;
     display: flex;
     justify-content: space-between;
-    width: 15vw;
-    height:40%; 
+    width: 70%;
+    height:30%;
+    padding-left: 15%;
     font-style: bold;
     font-size: 20px;
-    padding-left: 20%;
-    padding-right: 20%;
     margin: 8vh;
     font-family: sans-serif;
 }
