--- a/NTSF Sign Up/style.css
+++ b/NTSF Sign Up/style.css
@@ -1,149 +1,128 @@
-body 
-{
+body {
     background-position: absolute;
     align-items: center;
-    background-image:url("Background.jpeg");
+    background-image: url("Background.jpeg");
 }
 
-.header
-{
+.header {
     height: 15vh;
     display: flex;
     justify-content: space-between;
-    background-color:lightblue;
+    background-color: lightblue;
     border-radius: 10px;
     padding-right: 5%;
-    font-family: sans-serif;
-}  
+    font-family: Poppins, serif;
+}
 
-.chooselanguage
-{
-    align-items:center;
+.chooselanguage {
+    align-items: center;
     display: flex;
     text-align: center;
-} 
+}
 
-.sinhala 
-{
+.sinhala {
     height: 5vh;
     width: 6vw;
     border-radius: 5px;
 }
 
-.english
-{
+.english {
     background-color: #4B6E8E;
     height: 5vh;
     width: 6vw;
     border-radius: 5px;
-}  
+}
 
-.tamil
-{
+.tamil {
     height: 5vh;
     width: 6vw;
     border-radius: 5px;
 }
 
-.logo
-{
+.logo {
     width: 40%;
     display: flex;
     padding: 20px 40px;
-    padding-left:30px;
+    padding-left: 30px;
     padding-top: 30px;
-} 
-
-.head
-{
-    font-family: sans-serif;
 }
 
-.footer
-{
-    background-color:#C2C4C6;
+.head {
+    font-family: Poppins, serif;
+}
+
+.footer {
+    background-color: #C2C4C6;
     border-radius: 20px;
     height: 55vh;
-    width:70vh; 
+    width: 70vh;
     padding-right: 30px;
-    margin-top:5vh;
+    margin-top: 5vh;
     margin-left: 20%;
-    font-family: sans-serif;
+    font-family: Poppins, serif;
 }
 
-.heading 
-{
+.heading {
     text-align: center;
     padding-left: 15px;
-    font-family: sans-serif;
+    font-family: Poppins, serif;
 }
 
-.filldetails
-{
+.filldetails {
     padding-right: 80px;
     font-size: 20px;
     text-align: right;
 
-} 
+}
 
-.policeidfill
-{
+.policeidfill {
     padding-bottom: 5px;
     padding-left: 20px;
-} 
+}
 
-.nicfill
-{
-    padding-bottom: 5px;
-} 
-
-.emailfill
-{
+.nicfill {
     padding-bottom: 5px;
 }
 
-.mobilefill
-{
+.emailfill {
     padding-bottom: 5px;
 }
 
-.passwordfill1
-{
+.mobilefill {
     padding-bottom: 5px;
-} 
+}
 
-.policeidfill2
-{
+.passwordfill1 {
+    padding-bottom: 5px;
+}
+
+.policeidfill2 {
     padding-bottom: 30px;
-    font-size:20px;
-}  
+    font-size: 20px;
+}
 
-.signup
-{
+.signup {
     padding-top: 15px;
     padding-right: 120px;
-}   
+}
 
-.signup-btn 
-{   
+.signup-btn {
     height: 5vh;
     width: 6vw;
-    border-radius:  70px;
+    border-radius: 70px;
     background-color: #4B6E8E;
     text-align: center;
-}  
+}
 
-.option 
-{
+.option {
     padding-left: 70px;
     padding-bottom: 10px;
 }
 
-.list
-{
-    display:flex;
+.list {
+    display: flex;
     justify-content: space-between;
     font-size: 20px;
-    font-family:sans-serif;
+    font-family: Poppins, serif;
     padding-left: 140px;
 }
