--- a/Resources/CSS/login.css
+++ b/Resources/CSS/login.css
@@ -1,7 +1,7 @@
 body {
     background-position: absolute;
     align-items: center;
-    background-image: url("Background.jpeg");
+    background-image: url("Resources\Images\Background.jpeg");
 }
 
 .header {
