--- a/Resources/CSS/User/view-fine.css
+++ b/Resources/CSS/User/view-fine.css
@@ -1,86 +1,77 @@
-body 
-{
+body {
     background-position: absolute;
-    align-items: center; 
+    align-items: center;
     text-align: center;
-    font-family: sans-serif;
-    background-image:url("Background.jpeg");
+    font-family: Poppins, serif;
+    background-image: url("../../All-Images/Background.jpeg");
 }
 
-.header
-{
+.header {
     height: 90px;
     display: flex;
     justify-content: space-between;
-    background-color:lightblue;
+    background-color: lightblue;
     border-radius: 10px;
-    font-family: sans-serif;
-}  
+    font-family: Poppins, serif;
+}
 
-.logo1
-{
+.logo1 {
     position: left;
     width: 90px;
     display: flex;
     padding: 10px 40px;
-    justify-content:left;
-    
-} 
+    justify-content: left;
 
-.headline
-{
+}
+
+.headline {
     margin-top: 5px;
-    font-size:20px;
+    font-size: 20px;
     margin-right: 15px;
-} 
+}
 
-.logo2
-{
+.logo2 {
     position: right;
     width: 50px;
-    display: flex; 
+    display: flex;
     justify-content: right;
     padding: 20px 40px;
     margin: right 25px;
-    margin-right: 25px; 
+    margin-right: 25px;
     cursor: pointer;
-} 
+}
 
-.menu
-{
+.menu {
     height: 60px;
     display: flex;
     justify-content: space-between;
-    background-color:#C2C4C6;
+    background-color: #C2C4C6;
     border-radius: 10px;
-    font-family: sans-serif;
+    font-family: Poppins, serif;
     text-align: center;
-} 
+}
 
-.option1
-{
+.option1 {
     position: absolute;
     text-align: center;
     display: flex;
     justify-content: left;
-    padding-top: 5px; 
+    padding-top: 5px;
     padding-left: 25%;
-}  
+}
 
-.devider 
-{
+.devider {
     text-align: center;
     font-style: bold;
     padding-left: 50%;
-}  
+}
 
-.option2 
-{
+.option2 {
     text-align: center;
     padding-right: 25%;
-    padding-top: 5px; 
-    font-family: sans-serif;
-} 
+    padding-top: 5px;
+    font-family: Poppins, serif;
+}
 
 /*.userdetails 
 {
@@ -103,49 +94,45 @@ body
     text-align: right;
     padding-right: 25%;
     padding-top: 5px; 
-    font-family: sans-serif;
+    font-family: Poppins, serif;
 }*/
 
-.footer
-{
-    position:absolute;
-    background-color:#C2C4C6; 
-    height:320px;
-    width:700px;
-    border-radius:15px;
+.footer {
+    position: absolute;
+    background-color: #C2C4C6;
+    height: 320px;
+    width: 700px;
+    border-radius: 15px;
     text-align: center;
-    left: 50%; 
+    left: 50%;
     bottom: -20px;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
-}   
-
-.footer table {
-    display:flex;
-    justify-content:space between;
 }
 
-.table th 
-{
+.footer table {
+    display: flex;
+    justify-content: space between;
+}
+
+.table th {
     margin-top: 10px;
     padding-left: 10px;
 }
 
-.table th, td 
-{    
+.table th, td {
     padding: 30px;
     text-align: center;
     margin-left: 10px;
-}  
+}
 
-.pay-btn 
-{
+.pay-btn {
     text-align: center;
     align-items: right;
-    width:110px;
-    height:30px; 
-    background-color: #4B6E8E; 
-    cursor: pointer;  
+    width: 110px;
+    height: 30px;
+    background-color: #4B6E8E;
+    cursor: pointer;
     margin-bottom: 20px;
     margin-top: 10px;
     border-radius: 30px;
