--- a/Resources/CSS/User/profile-information.css
+++ b/Resources/CSS/User/profile-information.css
@@ -1,123 +1,108 @@
-body 
-{
-    align-items:center;
+body {
+    align-items: center;
     background-position: absolute;
-    background-image:url("Background.jpeg");
+    background-image: url("Background.jpeg");
 
 }
 
-.header
-{
+.header {
     height: 90px;
     display: flex;
     justify-content: space-between;
-    background-color:lightblue;
+    background-color: lightblue;
     border-radius: 10px;
     font-family: sans-serif;
-}  
+}
 
-.logo1
-{
+.logo1 {
     position: left;
     width: 90px;
     display: flex;
     padding: 10px 40px;
-    justify-content:left;
-} 
+    justify-content: left;
+}
 
-.headline
-{
+.headline {
     margin-top: 5px;
-    font-size:20px;
+    font-size: 20px;
     margin-right: 15px;
-} 
+}
 
-.logo2
-{
+.logo2 {
     position: right;
     width: 50px;
-    display: flex; 
+    display: flex;
     justify-content: right;
     padding: 20px 40px;
     margin-right: 30px;
-    margin-right: 15px; 
+    margin-right: 15px;
     cursor: pointer;
-} 
+}
 
-.menu
-{
+.menu {
     height: 60px;
     display: flex;
     justify-content: space-between;
-    background-color:#C2C4C6;
+    background-color: #C2C4C6;
     border-radius: 10px;
     font-family: sans-serif;
     text-align: center;
-} 
+}
 
-.option1
-{
+.option1 {
     position: absolute;
     text-align: center;
     display: flex;
     justify-content: left;
-    padding-top: 5px; 
-    margin-right:16.66%;
+    padding-top: 5px;
+    margin-right: 16.66%;
     cursor: pointer;
-}  
-
-  
-
-table tr
-{
-    display: flex;
-    justify-content: space-between;
-    
-} 
-
-table th 
-{
-    display: flex;
-    justify-content: center;
-    padding-left: ;
 }
 
-table 
 
-p 
-{   
-    margin-bottom:-5px;
+
+table tr {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+table th {
+    display: flex;
+    justify-content: center;
+    padding-left: 30px;
+}
+
+table p {
+    margin-bottom: -5px;
     font-size: 20px;
-} 
+}
 
-.footer
-{
-    position:absolute;
-    background-color:#C2C4C6; 
-    height:250px;
-    width:500px;
-    border-radius:15px;
-    left: 50%; 
+.footer {
+    position: absolute;
+    background-color: #C2C4C6;
+    height: 250px;
+    width: 500px;
+    border-radius: 15px;
+    left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
 }
 
-h4 
-{
+h4 {
     padding-left: 30px;
-}  
+}
 
-.cancel-btn 
-{   
+.cancel-btn {
     background-position: center;
-    margin-top:330px;
-    width:100px;
-    height:30px; 
-    align-items: center; 
+    margin-top: 330px;
+    width: 100px;
+    height: 30px;
+    align-items: center;
     cursor: pointer;
     margin-left: 50%;
-    margin-right:60px;
+    margin-right: 60px;
     border-radius: 30px;
     transform: translate(-50%);
     background-color: #467D53;
