--- a/resources/css/user/fine/view.css
+++ b/resources/css/user/fine/view.css
@@ -1,12 +1,14 @@
-body {
+body 
+{
     background-position: absolute;
     align-items: center;
     text-align: center;
     font-family: Poppins, serif;
-    background-image: url("../../All-Images/Background.jpeg");
+    background-image: url("../../../images/Background.jpeg");
 }
 
-.header {
+.header 
+{
     height: 90px;
     display: flex;
     justify-content: space-between;
@@ -15,7 +17,7 @@ body {
     font-family: Poppins, serif;
 }
 
-.logo1 {
+.ntsflogo {
     position: left;
     width: 90px;
     display: flex;
@@ -24,13 +26,15 @@ body {
 
 }
 
-.headline {
+.title 
+{
     margin-top: 5px;
     font-size: 20px;
     margin-right: 15px;
 }
 
-.logo2 {
+.accountlogo
+{
     position: right;
     width: 50px;
     display: flex;
@@ -41,7 +45,8 @@ body {
     cursor: pointer;
 }
 
-.menu {
+.optionbar
+{
     height: 60px;
     display: flex;
     justify-content: space-between;
@@ -51,7 +56,8 @@ body {
     text-align: center;
 }
 
-.option1 {
+.option1 
+{
     position: absolute;
     text-align: center;
     display: flex;
@@ -60,13 +66,15 @@ body {
     padding-left: 25%;
 }
 
-.devider {
+.devider 
+{
     text-align: center;
     font-style: bold;
     padding-left: 50%;
 }
 
-.option2 {
+.option2 
+{
     text-align: center;
     padding-right: 25%;
     padding-top: 5px;
@@ -97,11 +105,12 @@ body {
     font-family: Poppins, serif;
 }*/
 
-.footer {
+.container
+{
     position: absolute;
     background-color: #C2C4C6;
     height: 320px;
-    width: 700px;
+    width: 750px;
     border-radius: 15px;
     text-align: center;
     left: 50%;
@@ -110,23 +119,27 @@ body {
     box-sizing: border-box;
 }
 
-.footer table {
+.container table 
+{
     display: flex;
     justify-content: space between;
 }
 
-.table th {
+.table th 
+{
     margin-top: 10px;
     padding-left: 10px;
 }
 
-.table th, td {
+.table th, td 
+{
     padding: 30px;
     text-align: center;
     margin-left: 10px;
 }
 
-.pay-btn {
+.pay-btn 
+{
     text-align: center;
     align-items: right;
     width: 110px;
@@ -136,4 +149,11 @@ body {
     margin-bottom: 20px;
     margin-top: 10px;
     border-radius: 30px;
+    border:none;
+    color:white;
+}
+
+.pay-btn:hover 
+{
+    background-color: #587691;
 }
