--- a/resources/css/user/login.css
+++ b/resources/css/user/login.css
@@ -1,99 +1,150 @@
-body {
+body 
+{
     background-position: absolute;
-    align-items: center;
-    background-image: url("../../All-Images/Background.jpeg");
+    align-items: center; 
+    font-family:sans-serif;
+    background-image: url("../../images/Background.jpeg");
 }
 
-.header {
-    height: 15vh;
+.header 
+{
+    height: 90px;
     display: flex;
     justify-content: space-between;
-    background-color: lightblue;
+    background-color:lightblue;
     border-radius: 10px;
-    padding-right: 5%;
-    font-family: Poppins, serif;
 }
 
-.logo1 {
-    width: 40%;
+.ntsflogo
+{
+    position: left;
+    width: 90px;
     display: flex;
-    align-items: left;
-    padding: 20px 40px;
-    padding-left: 30px;
-    padding-top: 30px;
+    padding: 10px 40px;
+    justify-content:left;
 }
 
-.headline {
-    text-align: center;
-    padding-top: 20px;
+.title
+{
+    font-size:20px;
+    margin-right: 15px;
+    margin-top: 5px;
 }
 
-.logo2 {
-    width: 40%;
-    display: flex;
+.homelogo 
+{
+    position: right;
+    width: 50px;
+    display: flex; 
     justify-content: right;
-    align-items: right;
     padding: 20px 40px;
-    padding-right: 1px;
-    padding-top: 30px;
-}
+    margin-right: 30px;
+    margin-right: 15px; 
+    cursor: pointer;
+}  
 
-.footer {
-    background-color: #C2C4C6;
-    background-position: center;
-    border-radius: 20px;
-    height: 55vh;
-    width: 70vh;
-    padding-right: 30px;
-    margin-top: 12vh;
-    margin-left: 31%;
-    font-family: Poppins, serif;
-
-}
-
-.heading {
+.container 
+{
+    position:absolute;
+    background-color:#C2C4C6; 
+    height:350px;
+    width:500px;
+    border-radius:15px;
     text-align: center;
-    padding-left: 15px;
-    font-family: Poppins, serif;
+    left: 50%; 
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
 }
 
-.filldetails {
-    padding-right: 80px;
+.headline 
+{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.filldetails 
+{
     font-size: 20px;
-    text-align: right;
-    padding-top: 10px;
+    text-align: center; 
 }
 
-.licensefill {
+.licensefillrow
+{
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 20px;
-}
+} 
 
-
-
-.passwordfill {
+.nicfillrow 
+{
+    padding-top: 5px;
     padding-bottom: 5px;
+    margin-left:22px;
 }
 
-.login {
-    padding-top: 15px;
-    padding-right: 120px;
-}
+.passwordfillrow
+{
+    padding-bottom: 5px;
+    margin-left:10px;
+} 
 
-.login-btn {
-    height: 5vh;
-    width: 6vw;
-    border-radius: 70px;
+.vehiclenofillrow
+{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right:5px;
+} 
+
+.login-btn 
+{
+    margin-top:20px;
+    width:80px;
+    height:30px; 
     background-color: #4B6E8E;
+    align-items: center; 
+    cursor: pointer;
+    margin-left: 50%;  
+    margin-right: 90px;
+    border-radius: 30px;
+    transform: translate(-100%); 
+    border:none; 
+    margin-bottom: 10px;
+    color:white;
+}
+
+.forgotpassword 
+{
     text-align: center;
+    color:blue;
+    cursor: pointer;
 }
 
-.forgotpassword {
-    padding-left: 80px;
-}
-
-.option {
-    padding-left: 80px;
+.option 
+{
+    text-align: center;
     padding-bottom: 10px;
+} 
+
+.login-btn:hover 
+{
+    background-color: #587691;
+}  
+
+span 
+{
+    color:blue;
+    cursor: pointer;
+} 
+
+.input 
+{
+    border-radius: 5px; 
+    border:none;
+    align-items: center;
+} 
+
+span:hover 
+{
+    color:red;
 }
+
