--- a/suraif-archive/template/index.html
+++ b/suraif-archive/template/index.html
@@ -10,7 +10,7 @@
     <div class="DashBoardOption">
         <div class="logo">
             <div class="dashboto-logo">
-                <img src="/resources/" alt="">
+                <img src="/resources/images/logo_NTSF.png" alt="NTSF logo" class="ntsflogo">
             </div>
             <!-- <p class="logo rog">NTSF</p> -->
             <p class="logo">NTSF</p>
