--- a/resources/css/police/login.css
+++ b/resources/css/police/login.css
@@ -1,3 +1,27 @@
+/*Header*/
+.header
+{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    margin-bottom: 20px;
+    background-color: #14abfa;
+
+}
+
+img
+{
+    width: 120px;
+    height: 80px;
+}
+
+.profileLogo
+{
+    width: 100px;
+    height: 100px;
+    padding: 15px;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   background-size: cover;
