--- a/suraif-archive/template/index.html
+++ b/suraif-archive/template/index.html
@@ -12,10 +12,9 @@
             <div class="dashboto-logo">
                 <img src="/resources/images/logo_NTSF.png" alt="NTSF logo" class="ntsflogo">
             </div>
-            <!-- <p class="logo rog">NTSF</p> -->
-            <p class="logo">NTSF</p>
+            <p class="logo"><b>NTSF</b></p>
         </div>
-        <p class="tagline">National Traffic Spot Fine System</p>  <!--- <bold>HODL</bold> to the Moon!</p> -->
+        <p class="tagline">National Traffic Spot Fine System</p>
         <button class="main">IGP Dashboard</button>
         <div class="clear"></div>
         <ul class="menu">
