--- a/resources/css/police/login.css
+++ b/resources/css/police/login.css
@@ -23,7 +23,7 @@ img
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Lato", sans-serif;
   background-size: cover;
 }
 @keyframes spinner {
